# libjellyfin_c

./: .gitmodules  CMakeLists.txt  README.md
src/main/: Conf.h  JellyfinApi.h  JellyfinApi.mm  JfItem.h  JfItem.mm  SimpleApi.cpp  SimpleApi.h  Structures.h  library.h
src/main/net/: header.c  request.c  request.h  request.m  res.c
src/test/: main.cpp  main.mm
